<resources>

    <string name="app_name">OCParchiTN</string>
    
	<string name="loremipsum">Lorem ipsum dolor sit amet</string>
	
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Gestione Parchi</string>
    <string name="take_snapshot_btn">Fai una foto</string>
    <string name="snapshot_description">Snapshot dell\'attrezzatura</string>
    <string name="camera_unavailable">La fotocamera è occupata da un\'altra applicazione.\nChiudila o attendi che il sistema la liberi</string>
	<string name="settings_field_username">Username</string>
	<string name="settings_key_username">username</string>
	<string name="settings_field_password">Password</string>
	<string name="settings_key_password">password</string>
	<string name="settings_field_password2">(ripeti)</string>
	
	<!--  schermata main della struttura -->
	<string name="display_area_tipoPavimentazione">Pavimentazione: </string>
	<string name="display_area_tipoPavimentazione_fissa">Pavimentazione: </string>
	<string name="display_area_id">ID Area: </string>
	<string name="display_gioco_id">ID Gioco: </string>
	<string name="display_gioco_seriale">Seriale: </string>
	<string name="display_gioco_gps">Coordinate GPS: </string>
	<string name="display_gioco_marca">Marca: </string>
	<string name="display_gioco_nota">Nota: </string>
	<string name="display_controllo_nota">Nota: </string>
	<string name="display_gioco_descrizione">Descrizione gioco: </string>
	<string name="display_area_descrizione">Descrizione area:</string>
	<string name="display_gioco_data_prossimo_intervento">Data Prossimo intervento: </string>
	
	<string name="display_gioco_data_posizionamento">Data posizionamento: </string>
	<string name="display_gioco_data_installazione">Data installazione: </string>
	<string name="display_gioco_data_acquisto">Data acquisto: </string>
	<string name="display_gioco_rfid">RFID: </string>
	<string name="display_area_rfid">RFID A: </string>
	<string name="display_gioco_tipo">Tipo gioco: </string>
	<string name="display_gioco_modello">modello gioco: </string>
	<string name="display_gioco_gpsx">GPSX: </string>
	<string name="display_gioco_gpsy">GPSY: </string>
	<string name="display_gioco_confidence">Precisione: </string>
	<string name="display_gioco_posizione_rfid">Posizione RFID: </string>
	<string name="display_area_superficie">Superficie: </string>
	<string name="display_area_spessore">Spessore: </string>
	
	<string name="pulsante_invalidate_token_testo">Invalida il token</string>
	<string name="pulsante_status_token_testo">Status del token</string>
	<string name="pulsante_refresh_token_testo">Refresh del token</string>
	
	<string name="controllo_seleziona_controllo_disponibile">Seleziona un controllo fra quelli disponibili</string>
	<string name="controllo_mostra_controllo_attuale_prefisso">Controllo selezionato: </string>
	<string name="intervento_mostra_note_richiesta_prefisso">Note richiesta: </string>
	
	<string name="struttura_gioco_testo">Gioco</string>
	<string name="struttura_area_testo">Area</string>
	
	<string name="verifica_testo">Verifica</string>
	<string name="controllo_testo">Controllo</string>
	<string name="manutenzione_testo">Manutenzione</string>
	<string name="intervento_testo">Intervento</string>
	
	<string name="pulsante_start_by_rfid_testo">Parti da un RFID</string>
	<string name="pulsante_associa_rfid_a_gioco_testo">Associa RFID Gioco</string>
	<string name="pulsante_associa_rfid_a_area_testo">Associa RFID Area</string>
	<string name="pulsante_start_by_id_testo">Parti da un ID</string>
	<string name="pulsante_salva_modifiche_gioco_testo">Salva le modifiche</string>
	<string name="pulsante_sincronizza_modifiche_gioco_testo">Sincronizza le modifiche</string>
	<string name="pulsante_sincronizza_modifiche_list_item_testo">Invia</string>
	<string name="pulsante_sincronizza_modifiche_list_item_testo_elimina">Elimina</string>
	<string name="pulsante_invia_foto_list_item_testo">Invia Le Foto</string>
	<string name="checkbox_stato_sincronizzazione_testo">Sincronizzato</string>
	
	<string name="istruzioni_main_fragment">Per effettuare l\'abbinamento parti dal pulsante "Parti da un ID", inserisci l\'id del gioco cui vuoi associare un RFID e poi inserisci i dati che vuoi modificare e scansiona l\'RFID. Quando avrai scansionato l\'RFID ti sarà chiesto se vuoi associare quell\'RFID al gioco che stai visualizzando. Puoi accettare o rifiutare.\nSe il gioco ha già un RFID associato la cosa ti viene detta e puoi accettare o rifiutare la modifica\n Puoi cambiare l\'RFID quante volte vuoi finché non salvi e invii i dati sul server.\nUna volta inviati i dati sul server non potrai più modificare l\'RFID del gioco.</string>
	
	<string name="prompt_spinner_tipo_pavimentazione">Tipo di pavimentazione</string>
	<!--  filtering dell'intent -->
	<string name="schema_struttura">parchi</string>
	<string name="host_struttura">struttura</string>
	
	<string name="remote_loading_dialog_text">Carico</string>
	
	<string name="errore_generico_soap">Errore nel recupero dei dati del gioco Id: </string>
	
		
</resources>